[package]
name = "tower-sec-fetch"
version = "0.1.1"
edition = "2024"
description = "Rust Tower middleware to validate an HTTP request's Fetch Metadata"
authors = ["Matteo Joliveau <oss@matteojoliveau.com>"]
repository = "https://github.com/MatteoJoliveau/tower-sec-fetch"
license = "MIT OR Apache-2.0"
documentation = "https://docs.rs/tower-sec-fetch"
keywords = ["tower", "csrf", "http", "middleware", "axum"]

[dependencies]
futures = { version = "0.3.31", default-features = false, features = ["std"] }
http = "1.3.1"
tower = "0.5.2"

[dev-dependencies]
assert2 = "0.3.15"
axum = { version = "0.8.4", features = ["macros"] }
tokio = { version = "1.45.0", default-features = false, features = ["macros", "rt-multi-thread", "fs"] }
tower-test = "0.4.0"

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

